# relu_kan

./: .gitignore  Makefile  pyproject.toml
mk/: env.mk  jupyter.mk  lint.mk  profiling.mk  rsync.mk  test.mk
notebooks/: _0_dataset.ipynb  _0_dataset.py  _1_kan_scale.ipynb  _2_aug.ipynb  _3_v2.ipynb  _4_wide.ipynb  _5_channels.ipynb  _6_shallow.ipynb  _7_wide_kernel.ipynb  _8_block_num_layers.ipynb  talk.svgz  train.py
src/experiment/: data_source.py  data_source_v1.py  data_source_v2.py  eval_hist.py  experiment_base.py  experiment_relu_kan.py  experiment_spec.py  plot.py
src/experiment/kan/: conv_1d_relu_kan.py  conv_2d_relu_kan.py  conv_2d_spec.py  relu_kan_base.py  res_relu_kan.py
src/file_sys/: directories.py
src/infrastructure/: df_cache.py  hash.py  interrupt.py
template/: .env
