[tool.poetry]
name = "relu_kan"
version = "1.0"
description = ""
authors = ["NikolayXHD"]

[tool.poetry.dependencies]
black = { version = "*", extras = ["jupyter"] }
datasets = "*"                                      # huggingface
delu = "*"
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
more-itertools = "*"
mypy = "*"
numpy = "*"
polars = "1.17.1"
psutil = "*"
pyarrow = "*"
python = "~3.13"
python-dotenv = { version = "*", extras = ["cli"] }
ruff = "*"
scikit-learn = "*"
torch = "*"
torchmetrics = "*"
tqdm = "*"
types-tqdm = "*"
types-psutil = "*"
jupytext = "*"
safetensors = "*"
cst-lsp = "*"

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "all,-jupytext,-language_info,-kernelspec"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    'E721', # do not compare types
    'E741', # ambiguous variable name
    'E743', # ambiguous function definition
    'F401', # '.client.*' imported but unused
    # 'E203',  # whitespace before ':'
]

[tool.ruff.lint.extend-per-file-ignores]
"notebooks/**/*.py" = [
    'E402',
    'F811',
    'E501', # line too long
]
".jupyter/*_config.py" = [
    'E265',
    'E266',
    'E501', # line too long
    'W291',
    'F821',
]

[tool.mypy]
python_version = '3.13'
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests:$MYPY_CONFIG_FILE_DIR/notebooks"
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
warn_unused_configs = true
show_error_codes = true
plugins = ['numpy.typing.mypy_plugin']

[[tool.mypy.overrides]]
module = [
    'datasets.*',
    'delu.*',
    'IPython.*',
    'isodate.*',
    'joblib.*',
    'matplotlib.*',
    'pandas.*',
    'pyarrow.*',
    'scipy.*',
    'sklearn.*',
]
ignore_missing_imports = true

[tool.pylint.MASTER]
disable = [
    'C0114', # missing-module-docstring
    'C0115', # missing-class-docstring
    'C0116', # missing-function-docstrin
]

[tool.black]
line-length = 79
target-version = ['py313']
skip-string-normalization = true
# 'extend-exclude' excludes files or directories in addition to the defaults
#extend-exclude = '''
## A regex preceded with ^/ will apply only to files and directories
## in the root of the project.
#(
#  ^/foo.py    # exclude a file named foo.py in the root of the project
#  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
#)
#'''
